--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <div class="snow">
-        <img src="/img/snow.png" alt="" />
+        <img src="img/snow.png" alt="snow" />
       </div>
       <div class="header_content">
         <div class="nav nav-top">
