--- a/index.html
+++ b/index.html
@@ -90,17 +90,25 @@
         </div>
         <div class="photo_section">
           <div class="photo_content">
-            <div><img class="slideimg" src="img/adventurer.png" alt="adventurer" /></div>
-            <div><img class="slideimg" src="img/slide_peak.png" alt="adventurer" /></div>
-            <div><img class="slideimg" src="img/adventurer.png" alt="adventurer" /></div>
-            <div><img class="slideimg" src="img/slide_peak.png" alt="adventurer" /></div>
+            <div>
+              <img class="slideimg" src="img/adventurer.png" alt="adventurer" />
+            </div>
+            <div>
+              <img class="slideimg" src="img/slide_peak.png" alt="adventurer" />
+            </div>
+            <div>
+              <img class="slideimg" src="img/adventurer.png" alt="adventurer" />
+            </div>
+            <div>
+              <img class="slideimg" src="img/slide_peak.png" alt="adventurer" />
+            </div>
           </div>
           <div class="slide_arrow">
             <div class="previous_arrow">
               <button class="previous">&larr;</button>
             </div>
             <div class="next_arrow">
-              <button class="next">&rarr;</butto>
+              <button class="next">&rarr;</button>
             </div>
           </div>
           <div class="photo_slide">
